<resources>
    <string name="app_name">MedButler</string>
    <string name="labelLog">I am already registered, I want to login</string>
    <string name="butRegist">Register</string>
    <string name="greeting">Welcome %1$s!</string>
    <string name="create_a_new_user">Create a new user</string>
    <string name="selecMan">Man</string>
    <string name="selecWoman">Woman</string>
    <string name="loginBut">Log in</string>
    <string name="createNewUser">I want to create a new user</string>
    <string name="key_full_name" translatable="false">key_full_name</string>
    <string name="key_email" translatable="false">key_email</string>
    <string name="key_sleep_timer" translatable="false">key_sleep_timer</string>
    <string name="key_music_quality" translatable="false">key_music_quality</string>
    <string name="key_notification_ringtone" translatable="false">key_notification_ringtone</string>
    <string name="sync_interval" translatable="false">sync_interval</string>
    <string name="full_name" translatable="false">full_name</string>
    <string name="password" translatable="false">password</string>
    <string name="email_adress" translatable="false">email_adress</string>
    <string name="date_of_birth" translatable="false">date_of_birth</string>
    <string name="height" translatable="false">height</string>
    <string name="weight" translatable="false">weight</string>
    <string name="key_color_theme" translatable="false">key_color_theme</string>
    <string name="key_faq" translatable="false">key_faq</string>
    <string name="key_privacy_policy" translatable="false">key_privacy_policy</string>
    <string name="key_terms_conditions" translatable="false">key_terms_conditions</string>
    <string name="pref_sync_connection_type">pref_sync_connection_type</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="treatment">Treatment</string>
    <string name="calendar">Calendar</string>
    <string name="calendar2">CALENDAR</string>
    <string name="profile_picture_ListPref" translatable="false">profile_picture_ListPref</string>
    <string name="calendar_picture_ListPref" translatable="false">calendar_picture_ListPref</string>
    <string name="settings_picture_ListPref" translatable="false">settings_picture_ListPref</string>
    <string name="treatment_picture_ListPref" translatable="false">treatment_picture_ListPref</string>
    <string name="key_background_theme" translatable="false">key_background_theme</string>
    <string name="change_color_toolbar" translatable="false">change_color_toolbar</string>
    <string name="key_toolbar_color" translatable="false">key_toolbar_color</string>
    <string name="action_gohome" translatable="false">Go Home</string>
    <string name="action_gocalendar" translatable="false">Go Calendar</string>
    <string name="disease_information">Disease Information</string>
    <string name="list_medicines">List of medicines</string>
    <string name="add">Add</string>
    <string name="enter_the_required_information_about_your_medicine">Enter the required information about your medicine</string>
    <string name="enter_the_required_information_about_your_task">Enter the required information about your task</string>
    <string name="enter_the_required_information_about_your_reminder">Enter the required information about your reminder</string>
    <string name="discard">Discard</string>
    <string name="turn_on_notifications_for_this_medicine">Turn on notifications for this medicine</string>
    <string name="turn_on_notifications_for_this_task">Turn on notifications for this task</string>
    <string name="turn_on_notifications_for_this_reminder">Turn on notifications for this reminder</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="medicine_s_name">Medicine\'s name</string>
    <string name="reminder_s_name">Reminder\'s name</string>
    <string name="meal_information">Meal complete information</string>
    <string name="task_s_name">Task\'s name</string>
    <string name="medication_frequency">Medication frequency</string>
    <string name="reminder_importance">Reminder importance</string>
    <string name="select_meal">Select which meal of the day is:</string>
    <string name="treatment_duration">Treatment duration</string>
    <string name="click_here_to_select_the_time">click here to select the time</string>
    <string name="click_here">click here</string>
    <string name="modify_anything_about_your_medicine">Modify anything about your medicine</string>
    <string name="modify_anything_about_your_task">Modify anything about your task</string>
    <string name="modify_anything_about_your_reminder">Modify anything about your reminder</string>
    <string name="modify_anything_about_your_meal">Modify anything about your meal</string>
    <string name="save_changes">Save Changes</string>
    <string name="discard_changes">Discard changes</string>
    <string name="email">Email: %1$s</string>
    <string name="height2">Height: %1$s %2$s</string>
    <string name="weight2">Weight: %1$s %2$s</string>
    <string name="birthday">Birthday: %1$s</string>
    <string name="time_select">"    %1$s:%2$s"</string>
    <string name="key_delete_account">key_delete_account</string>
    <string name="key_logout">key_logout</string>
    <string name="key_select_user_image">key_select_user_image</string>
    <string name="userDiseases">User Diseases</string>
    <string name="allDiseases">All Diseases</string>
    <string name="please_select_option">Please Select an Option</string>
    <string name="que_es">Qué es</string>
    <string name="causas">Causas</string>
    <string name="prevencion">Prevención</string>
    <string name="tratamientos">Tratamientos</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">YES</string>
    <string name="modif">Modify Medicine</string>
    <string name="modif_task">Modify Task</string>
    <string name="modif_reminder">Modify Reminder</string>
    <string name="modif_food">Modify Meal</string>
    <string name="que_es_hipertension_arterial">Qué es\n\nLa hipertensión arterial es una patología crónica en la que los vasos sanguíneos tienen una tensión persistentemente alta, lo que puede dañarlos. La tensión arterial es la fuerza que ejerce la sangre contra las paredes de los vasos (arterias) al ser bombeada por el corazón. Cuanto más alta es la tensión, más esfuerzo tiene que realizar el corazón para bombear.\n\nUna de las características de esta enfermedad es que no presenta unos síntomas claros y estos pueden tardar mucho tiempo en manifestarse. Sin embargo, constituye el factor de riesgo cardiovascular más prevalente.\n\nEn la actualidad, las enfermedades cardiovasculares son la primera causa de mortalidad en España. La hipertensión es una patología tratable, pero su falta de control puede desencadenar complicaciones graves, como infarto de miocardio, insuficiencia cardiaca o ictus.\n\nLas primeras consecuencias de la hipertensión las sufren las arterias, que se endurecen a medida que soportan la presión arterial alta de forma continua, se hacen más gruesas y puede verse dificultado al paso de sangre a través de ellas. Este daño en las paredes de los  vasos sanguíneos favorece que se depositen colesterol y triglicéridos en ellas, por eso lo que hace que la hipertensió sea un de riesgo muy importante para el desarrollo de arterioesclerosis.</string>
    <string name="causas_hipertension_arterial">Aunque todavía no se conocen las causas específicas que provocan la hipertensión arterial, sí se ha relacionado con una serie de factores que suelen estar presentes en la mayoría de las personas que la sufren. Conviene separar aquellos relacionados con la herencia genética, el sexo, la edad y la raza, y por tanto poco modificables, de aquellos otros que se podrían cambiar al variar los hábitos y el ambiente en el que viven las personas, como la obesidad, la sensibilidad al sodio, el consumo excesivo de alcohol, el uso de ciertos fármacos y un estilo de vida muy sedentario.</string>
    <string name="prevencion_hipertension_arterial">Tener hábitos de vida saludable y, sobre todo, evitar el sobrepeso y la obesidad, son los principales factores para prevenir la aparición de la hipertensión.\n\nLos especialistas señalan que llevar una dieta sana y practicar ejercicio puede ayudar a que la población general esté exenta de sufrir esta patología. Dejar de fumar también previene esta patología, ya que el tabaco eleva la presión arterial.\n\nEn los casos en los que en la familia haya antecedentes de hipertensión y por tanto haya una predisposición a ser hipertenso a lo largo del tiempo, este factor genético supone una llamada de atención adicional a que el paciente cuide esos hábitos de vida y vigile sus cifras de tensión arterial.</string>
    <string name="tratamientos_hipertension_arterial">Para tratar la hipertensión hay dos bloques fundamentales de acciones:\n\n- Mejora de los hábitos de vida\nEl paciente tiene que llevar una dieta saludable, disminuir el consumo de calorías, de azúcares y grasas y aumentar la práctica de ejercicio físico. Estas dos prácticas tienen como resultado un mejor control del peso y si el peso está bien controlado es una manera sencilla de controlar la hipertensión. También se recomienda dejar de fumar y evitar el consumo de alcohol.\n\n- Tratamientos farmacológicos\nEn caso de que los cambios de los hábitos de vida no funcionen, hoy en día existen tratamientos farmacológicos que son muy útiles para controlar la presión arterial. Inicialmente estos tratamientos comienzan con un solo fármaco. No obstante, en algunos casos esta medida no es suficiente y necesitan combinar con dos o tres medicinas para controlar la presión arterial.</string>
    <string name="que_es_infarto_de_miocardio">Qué es\n\nEl infarto de miocardio es una patología que se caracteriza por la muerte de una porción del músculo cardíaco que se produce cuando se obstruye completamente una arteria coronaria.\n\nEn las circunstancias en las que se produce la obstrucción el aporte sanguíneo se suprime. Si el músculo cardiaco carece de oxígeno durante demasiado tiempo, el tejido de esa zona muere y no se regenera.\n\nSegún explica Rosa María Lidón, presidenta de la sección de Cardiopatía Isquémica y Cuidados Agudos Cardiovasculares de la Sociedad Española de Cardiología (SEC), esta patología se manifiesta cuando las personas alcanzan la media edad y afecta tanto a hombres como a mujeres. “En las mujeres la enfermedad se manifiesta unos diez años más tarde que en los hombres por lo cual, el mito que hay de que a las mujeres no les afecta la cardiopatía isquémica es mentira”, aclara a CuidatePlus. Esto se debe a que la situación hormonal de la mujer menstruante hace que esté más protegida contra el riesgo de padecer un infarto de miocardio.</string>
    <string name="enter_information_about_your_meal">Enter information about your meal</string>
    <string name="real_name">Real name</string>
    <string name="email_login">Email (Login)</string>
    <string name="password2">Password</string>
    <string name="password_repeat">Password (repeat)</string>
    <string name="date_of_birth2">Date of birth</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="select_your_diseases">Select your diseases</string>
</resources>