<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginback"
    android:orientation="vertical"
    tools:context=".classes.view.Sign_up">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:text="@string/create_a_new_user"
        android:textColor="@color/colorTitulCrearNouUsuari"
        android:textColorHighlight="@color/highlightTitulCrearNouUsuari"
        android:textSize="32sp"
        android:fontFamily="@font/cabin"
        />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="60dp">
    <EditText
        android:fontFamily="@font/cabin"
        android:id="@+id/fullnameRegist"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:ems="10"
        android:hint="@string/real_name"
        android:inputType="textPersonName"
        />
    <EditText
        android:fontFamily="@font/cabin"
        android:id="@+id/usernameRegist"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:ems="10"
        android:hint="@string/email_login"
        android:inputType="textPersonName"
     />
    <EditText
        android:fontFamily="@font/cabin"
        android:id="@+id/passwordRegist1"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:ems="10"
        android:hint="@string/password2"
        android:inputType="textPassword"
        />
    <EditText
        android:fontFamily="@font/cabin"
        android:id="@+id/passwordRegist2"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:ems="10"
        android:hint="@string/password_repeat"
        android:inputType="textPassword"
   />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="265dp"
        android:layout_marginLeft="65dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">


        <RadioButton
            android:fontFamily="@font/cabin"
            android:id="@+id/maleButRegist"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/selec_genere"
            android:button="@null"
            android:gravity="center"
            android:text="@string/selecMan"
            android:textSize="18sp" />

        <RadioButton
            android:fontFamily="@font/cabin"
            android:id="@+id/femaleButRegst"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/selec_genere"
            android:button="@null"
            android:gravity="center"
            android:text="@string/selecWoman"
            android:textSize="18sp" />
    </RadioGroup>

    <EditText
        android:fontFamily="@font/cabin"
        android:id="@+id/birthdayRegist"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:hint="@string/date_of_birth2"
        android:inputType="none"
        android:onClick="pickBirthday"
        android:focusable="true" />
    <EditText
        android:fontFamily="@font/cabin"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:id="@+id/alturaRegist"
        android:hint="@string/height_cm"
        android:inputType="number"
        android:layout_marginLeft="65dp">

    </EditText>
    <EditText
        android:fontFamily="@font/cabin"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:id="@+id/pesRegist"
        android:hint="@string/weight_kg"
        android:inputType="number"
        android:layout_marginLeft="65dp">

    </EditText>
    <EditText
        android:fontFamily="@font/cabin"
        android:id="@+id/diseaseSelectRegist"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:editable="false"
        android:layout_marginLeft="65dp"
        android:hint="@string/select_your_diseases"
        android:onClick="selectDisease">

    </EditText>

    <Button
        android:id="@+id/butRegist"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="136dp"
        android:text="@string/butRegist"
        android:textSize="18sp"
        android:fontFamily="@font/cabin"
        android:textStyle="bold"
        android:onClick="enregistrar"/>

    <Button
        android:fontFamily="@font/cabin"
        android:id="@+id/labelFerLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginEnd="66dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:onClick="actionGoToLogin"
        android:text="@string/labelLog"
        android:textColor="@color/md_black"
        android:textSize="18sp"
        android:textStyle="normal" />

</LinearLayout>

</ScrollView>


</LinearLayout>